--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,11 @@
-
-
 {
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
-
-    "lib": ["ES2022", "DOM"],
-    "types": ["node"],
-
-    "outDir": "dist",
-    "rootDir": "src",
-
     "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "types": ["node"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["dist", "node_modules"]
+  "include": ["src/**/*.ts"]
 }
-
